@@ -1,4 +1,5 @@
-04. Jul. 2013 - amo - initial commit of changinf component model to pure interface model... developers should implement components instead of extending
+18. Jul. 2013 - amo - removed @CallbackComponent annotation, updated ICallbackComponent an IStatelessComponent
+04. Jul. 2013 - amo - initial commit of changing component model to pure interface model... developers should implement components instead of extending
 04. Jul. 2013 - amo - initial commit of Context, which contains basic metadata as well as the message listeners and will contain stuff like managedDialog factory
 24. Jun. 2013 - amo - start initial work on context object
 28. May. 2013 - amo - renamed OnStart and OnTearDown to PostConstruct and PreDestroy.
